[gd_scene load_steps=6 format=3 uid="uid://dr8fg3dp2c4ge"]

[ext_resource type="Script" path="res://scripts/bubble.gd" id="1_dc2vw"]
[ext_resource type="Texture2D" uid="uid://cgjqivmilulv4" path="res://temp_assets/temp_sprites/bubble.png" id="2_i3srf"]
[ext_resource type="Texture2D" uid="uid://chjy5bxcptwaq" path="res://temp_assets/temp_sprites/tiles.png" id="2_rjudr"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_uarq5"]
size = Vector2(64, 64)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6vigv"]
size = Vector2(64, 9)

[node name="AscendingObject" type="StaticBody2D"]
z_index = 2
script = ExtResource("1_dc2vw")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_uarq5")

[node name="bubble" type="Sprite2D" parent="."]
texture = ExtResource("2_i3srf")
region_rect = Rect2(128, 128, 64, 64)

[node name="Area2D" type="Area2D" parent="."]
z_index = 5
collision_layer = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, -36.5)
shape = SubResource("RectangleShape2D_6vigv")

[node name="puddle" type="Sprite2D" parent="Area2D"]
z_index = 5
texture = ExtResource("2_rjudr")
region_enabled = true
region_rect = Rect2(128, 128, 64, 64)

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
